--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Solhint plugin for detecting overflows in numeric (uint/int) casts",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo No tests"
   },
   "keywords": [
     "solidity",
