--- a/packages/solhint-plugin-meta-transactions/package.json
+++ b/packages/solhint-plugin-meta-transactions/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "solhint-plugin-erc2771",
+  "name": "solhint-plugin-meta-transactions",
   "version": "0.1.0",
   "publishConfig": {
     "access": "public"
