--- a/packages/solhint-plugin-meta-transactions/package.json
+++ b/packages/solhint-plugin-meta-transactions/package.json
@@ -5,6 +5,7 @@
     "access": "public"
   },
   "description": "Solhint plugin for ensuring implementation of erc2771 (Secure Protocol for Native Meta Transactions)",
+  "repository": "github:Synthetixio/solhint-plugins",
   "main": "index.js",
   "scripts": {
     "test": "echo No tests"
