--- a/packages/solhint-plugin-numcast/package.json
+++ b/packages/solhint-plugin-numcast/package.json
@@ -5,6 +5,7 @@
     "access": "public"
   },
   "description": "Solhint plugin for detecting overflows in numeric (uint/int) casts",
+  "repository": "github:Synthetixio/solhint-plugins",
   "main": "index.js",
   "scripts": {
     "test": "echo No tests"
